<?xml version="1.0" encoding="utf-8"?>
<!-- Bottom navigation menu for staff users -->
<menu xmlns:android="http://schemas.android.com/android/apk/res/android">
    <!-- Dashboard navigation item -->
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/nav_dashboard" />

    <!-- Menu management navigation item -->
    <item
        android:id="@+id/nav_menu"
        android:icon="@drawable/ic_menu"
        android:title="@string/nav_menu" />

    <!-- Reservations navigation item -->
    <item
        android:id="@+id/nav_reservations"
        android:icon="@drawable/ic_reservations"
        android:title="@string/nav_reservations" />

    <!-- Profile navigation item -->
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />
</menu>